<resources>
    <string name="app_name">Frisby Cerca</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="exitoguardar">Éxito al Guardar la sede</string>
    <string name="exitoborrar">Se Borró la Sede</string>
    <string name="noexiste">No Existe La sede con ese número</string>
    <string name="exitomodificar">Éxito al Modificar la sede</string>


    <string name="maintitulo">Acá Puede Modificar las Sedes</string>

    <string name="numerosede">Número de la sede</string>
    <string name="nombresede">Nombre de la sede</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="buscar">Buscar</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="Modificar">Editar</string>
    <string name="Retornar">Menú Principal</string>
    <string name="sedesdisponibles">Sedes Disponibles:</string>
    <string name="oferta">Oferta del Mes</string>
    <string name="numsedes">Mayor a 1</string>
    <string name="tododatos">Por Favor, Ingrese Todos los datos</string>
    <string name="solo5">Solo número positivos porfavor</string>
    <string name="buscarsede">Para Buscar Ingrese el número de la sede</string>
    <string name="eliminarsede">Busque la sede y después elimínela</string>
    <string name="editarsede">Busque la sede y luego edítela</string>
    <string name="yaexiste">Ya Existe una sede Con Ese número</string>








    <string name="bienvenido">Descubre Cual Sede Te queda Más Cerca</string>




    <string name="editarsedes">Editar Sedes</string>
    <string name="versedes">Ver Sedes</string>
    <string name="nadie">Nadie Lo Hace Como frisby lo hace</string>
    <string name="title_activity_mapas_ubication">Map</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_prueba">Map</string>
    <string name="title_activity_ubication_sedes">Map</string>
    <string name="title_activity_activity_ubication_sedes">Map</string>








</resources>
